slightly increased page width to prevent line break in description

--- a/stylesheets/candle-specific.css
+++ b/stylesheets/candle-specific.css
@@ -3,3 +3,7 @@
   background-repeat: no-repeat;
   padding-left: 35px;
 }
+
+.inner {
+	max-width: 680px;
+}
